--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ the rest of the tokio crates.
 """
 
 [dependencies]
-futures = { git = "https://github.com/singaraiona/futures-rs", version = "*" }
+futures = { git = "https://github.com/singaraiona/futures-rs", version = "0.1.3" }
 log = "0.3"
 mio = "0.6"
 scoped-tls = "0.1.0"
